# CryptoPulse

[tool.poetry]
name = "cryptopulse"
version = "0.1.0"
description = "单币种智能交易决策系统 — 短·快·准"
authors = ["CryptoPulse Team"]

[tool.poetry.dependencies]
python = "^3.11"
python-okx = "^0.1.0"
websockets = "^12.0"
pandas = "^2.2"
numpy = "^1.26"
ta-lib = "^0.6"
pandas-ta = "^0.3"
redis = "^5.0"
crewai = "^0.30"
openai = "^1.30"
fastapi = "^0.111"
uvicorn = "^0.30"
pydantic = "^2.7"
pydantic-settings = "^2.3"
python-dotenv = "^1.0"
pyyaml = "^6.0"
loguru = "^0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
